agrego contenido de texto y hago 3 paginas full responsive

--- a/index.html
+++ b/index.html
@@ -38,16 +38,16 @@
         <h2>La experiencia de nuestras viajeras</h2>
         <section class="opiniones">
             <div>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis ipsum pariatur doloribus vel earum recusandae illo veritatis magni dicta minus vero sapiente unde, nostrum cumque, vitae sequi numquam! Ab, corporis?</p>
+            <p>"Estoy muy feliz de haber encontrado esta agencia. Encontré un grupo de personas divertidas e interesantes con las que pude compartir nuevas experiencias. Aprendí mucho de cada una y me llevo nuevas amistades, ¡Hasta el próximo viaje!"</p>
             </div>
             <div>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis ipsum pariatur doloribus vel earum recusandae illo veritatis magni dicta minus vero sapiente unde, nostrum cumque, vitae sequi numquam! Ab, corporis?</p>
+            <p>"Muchas gracias por su servicio, realmente excepcional. Me sentí comprendida y acompañada durante toda la estadía, todas estuvieron predispuestas a ayudarme cuando lo necesité. Todo excelente, sigan así."</p>
             </div> 
             <div>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis ipsum pariatur doloribus vel earum recusandae illo veritatis magni dicta minus vero sapiente unde, nostrum cumque, vitae sequi numquam! Ab, corporis?</p>
+            <p>"¡Espero con ansias la siguiente aventura! Este tipo de viajes dan espacio a conocer nuevas personas, nuevas historias y, sobre todo, animarnos a viajar aunque no tengamos un amigo o familiar que nos acompañe."</p>
             </div>
             <div>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis ipsum pariatur doloribus vel earum recusandae illo veritatis magni dicta minus vero sapiente unde, nostrum cumque, vitae sequi numquam! Ab, corporis?</p>
+            <p>"Participé en los últimos tres viajes y voy a seguir haciéndolo siempre que pueda. La organización es excelente, lo pasamos muy bien sin tener que preocuparnos por nada. ¡Muchas gracias!"</p>
             </div>
         </section>
     </main>
