--- a/pages/nuestros-viajes.html
+++ b/pages/nuestros-viajes.html
@@ -27,11 +27,11 @@
         <h2>Bariloche</h2>
         <section class="viaje">
             <div>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium at exercitationem dolor itaque perferendis aliquid. Corrupti id quis eligendi at, suscipit culpa autem nam vel, ipsam voluptatibus voluptates asperiores officiis.</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex modi corrupti ipsam maiores beatae, dolorum quos iste, veritatis obcaecati unde est commodi debitis exercitationem accusantium officiis voluptatibus consectetur ab deleniti.</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id nihil voluptatem atque esse illum, inventore repellendus adipisci fuga illo, nobis animi, beatae non expedita deleniti quidem ea hic enim quos.</p>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugit, accusamus! Nulla in libero laboriosam enim magni recusandae, impedit inventore amet vitae neque labore! Iure asperiores aliquid nemo numquam eveniet exercitationem.</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur nam perferendis fuga, doloribus assumenda suscipit, molestiae sint ullam cupiditate nisi officiis quae sed illo expedita, odio eveniet similique ducimus aspernatur?</p>
+            <p>La ciudad de Bariloche te ofrece la posibilidad de realizar un montón de actividades durante todo el año. Hay mucho para hacer y recorrer: playas, ríos, bosques, estepa, deportes de aventura, caminar o, simplemente, contemplar sus increíbles paisajes.</p>
+            <p>La ciudad está ubicada dentro del parque nacional Nahuel Huapi, junto a la cordillera de los Andes. En el 2012 fue declarada capital nacional del turismo de aventura, y en el 2015 capital nacional del chocolate.</p>
+            <p>Proponemos un itinerario de 5 días y 4 noches en la ciudad de Bariloche. Durante esos días, vamos a recorrer el centro, pero también visitaremos los alrededores de la ciudad.</p>
+            <p>Entre los atractivos más importantes de la ciudad se encuentran el centro cívico, Circuito Chico y Cerro Catedral. En sus alrededores conoceremos la ruta de los Siete Lagos, Puerto Blest, El Bolsón y Lago Puelo.</p>
+            <p>El paquete turístico que ofrecemos incluye aéreos, alojamiento con media pensión, excursiones y cena show de despedida en la última noche.</p>
             <h3>Precio final: AR$ XXX.XXX</h3>
             <button><a href="">Quiero reservar</a></button>
             </div>
