--- a/pages/quienes-somos.html
+++ b/pages/quienes-somos.html
@@ -1,58 +1,85 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Quiénes somos</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Jacques+Francois&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Jacques+Francois&display=swap"
+      rel="stylesheet"
+    />
 
-    <link rel="stylesheet" href="../css/style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="../css/style.css" />
+  </head>
+  <body>
     <header>
-        <nav>
-            <ul>
-                <li><a href="../index.html">Inicio</a></li>
-                <li><a href="#">Quiénes somos</a></li>
-                <li><a href="./nuestros-viajes.html">Nuestros viajes</a></li>
-                <li><a href="./medios-de-pago.html">Medios de pago</a></li>
-                <li><a href="./contacto.html">Contacto</a></li>
-            </ul>
-        </nav>
+      <nav>
+        <ul>
+          <li><a href="../index.html">Inicio</a></li>
+          <li><a href="#">Quiénes somos</a></li>
+          <li><a href="./nuestros-viajes.html">Nuestros viajes</a></li>
+          <li><a href="./medios-de-pago.html">Medios de pago</a></li>
+          <li><a href="./contacto.html">Contacto</a></li>
+        </ul>
+      </nav>
     </header>
     <main>
-        <section class="quienesSomos">
-            <div>
-            <h1>Quiénes somos</h1>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Temporibus ex eligendi provident eius deleniti voluptatum numquam odio quam minima, dignissimos, tempora laudantium at dicta atque! Suscipit laborum repudiandae laudantium omnis.</p>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Temporibus ex eligendi provident eius deleniti voluptatum numquam odio quam minima, dignissimos, tempora laudantium at dicta atque! Suscipit laborum repudiandae laudantium omnis.</p>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Temporibus ex eligendi provident eius deleniti voluptatum numquam odio quam minima, dignissimos, tempora laudantium at dicta atque! Suscipit laborum repudiandae laudantium omnis.</p>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Temporibus ex eligendi provident eius deleniti voluptatum numquam odio quam minima, dignissimos, tempora laudantium at dicta atque! Suscipit laborum repudiandae laudantium omnis.</p>
-            </div>
-            <div>
-        <img src="https://images.unsplash.com/photo-1506869640319-fe1a24fd76dc?crop=entropy&cs=srgb&fm=jpg&ixid=M3w0Mzc0NDd8MHwxfHNlYXJjaHwyMHx8ZnJpZW5kcyUyMGhhbmRzfGVufDB8fHx8MTcwOTQwNTE1NXww&ixlib=rb-4.0.3&q=85&q=85&fmt=jpg&crop=entropy&cs=tinysrgb&w=450" alt="">
-            </div>
-    </section>
-    <h2>Nuestro equipo</h2>
-        <section class="equipo">
-            <div>
-                <img src="../assets/Persona1.jpg" alt="">
-                <p>Nombre y apellido 1</p>
-                <img src="../assets/Persona2.jpg" alt="">
-                <p>Nombre y apellido 2</p>
-            </div>
-            <div>
-                <img src="../assets/Persona3.jpg" alt="">
-                <p>Nombre y apellido 3</p>
-                <img src="../assets/Persona4.jpg" alt="">
-                <p>Nombre y apellido 4</p>
-            </div>
-        </section>
+      <section class="quienesSomos">
+        <div>
+          <h1>Quiénes somos</h1>
+          <p>
+            Somos un grupo de cuatro amigas con un sueño. Nos conocemos desde la
+            adolescencia y, a pesar de que cada una tomó un rumbo profesional
+            diferente, pudimos mantener contacto hasta el presente.
+          </p>
+          <p>
+            El grupo está compuesto por una licenciada en turismo, una abogada,
+            una contadora y una coordinadora. La agencia surgió en marzo 2021
+            gracias a la necesidad de crear un espacio cálido y seguro para que
+            cada vez más mujeres se animen a viajar solas.
+          </p>
+          <p>
+            El servicio que ofrecemos tiene como objetivo eliminar
+            preocupaciones, brindando un paquete turístico que incluye
+            transporte, alojamiento y actividades para que puedas enfocarte en
+            lo que realmente importa: ¡descansar y disfrutar!
+          </p>
+          <p>
+            Hasta el momento realizamos seis viajes con destinos nacionales y
+            grupos de 15 personas en promedio. Actualmente estamos trabajando
+            para que, en un futuro, podamos realizar viajes con destinos
+            internacionales y con grupos más grandes.
+          </p>
+        </div>
+        <div>
+          <img
+            src="https://images.unsplash.com/photo-1506869640319-fe1a24fd76dc?crop=entropy&cs=srgb&fm=jpg&ixid=M3w0Mzc0NDd8MHwxfHNlYXJjaHwyMHx8ZnJpZW5kcyUyMGhhbmRzfGVufDB8fHx8MTcwOTQwNTE1NXww&ixlib=rb-4.0.3&q=85&q=85&fmt=jpg&crop=entropy&cs=tinysrgb&w=450"
+            alt=""
+          />
+        </div>
+      </section>
+      <h2>Nuestro equipo</h2>
+      <section class="equipo">
+        <div class="persona1">
+          <img src="../assets/Persona1.jpg" alt="" />
+          <p>Ana María Gutiérrez <br />Licenciada en Turismo</p>
+        </div>
+        <div class="persona2">
+          <img src="../assets/Persona2.jpg" alt="" />
+          <p>Laura Medina <br />Abogada</p>
+        </div>
+        <div class="persona3">
+          <img src="../assets/Persona3.jpg" alt="" />
+          <p>Paola Di Lorenzo <br />Contadora</p>
+        </div>
+        <div class="persona4">
+          <img src="../assets/Persona4.jpg" alt="" />
+          <p>Julieta Perez <br />Coordinadora</p>
+        </div>
+      </section>
     </main>
-    <footer>
-        Hecho por Micaela Chanquía
-    </footer>
-</body>
+    <footer>Hecho por Micaela Chanquía</footer>
+  </body>
 </html>
