--- a/pages/nuestros-viajes.html
+++ b/pages/nuestros-viajes.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Jacques+Francois&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
     <link rel="stylesheet" href="../css/style.css">
 </head>
@@ -33,7 +34,7 @@
             <p>Entre los atractivos más importantes de la ciudad se encuentran el centro cívico, Circuito Chico y Cerro Catedral. En sus alrededores conoceremos la ruta de los Siete Lagos, Puerto Blest, El Bolsón y Lago Puelo.</p>
             <p>El paquete turístico que ofrecemos incluye aéreos, alojamiento con media pensión, excursiones y cena show de despedida en la última noche.</p>
             <h3>Precio final: AR$ XXX.XXX</h3>
-            <button><a href="">Quiero reservar</a></button>
+            <button class="p-2"><a href="">Quiero reservar</a></button>
             </div>
             <div>
             <img src="../assets/Bariloche1.jpg" alt="">
@@ -48,5 +49,7 @@
     <footer>
         Hecho por Micaela Chanquía
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
 </body>
 </html>
