--- a/index.html
+++ b/index.html
@@ -8,19 +8,28 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Jacques+Francois&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link
+  rel="stylesheet"
+  href="https://fonts.googleapis.com/icon?family=Material+Icons"
+/>
+
 
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <header>
+    <header class="nav-wrapper">
         <nav>
-            <ul>
-                <li><a href="#">Inicio</a></li>
-                <li><a href="./pages/quienes-somos.html">Quiénes somos</a></li>
-                <li><a href="./pages/nuestros-viajes.html">Nuestros viajes</a></li>
-                <li><a href="./pages/medios-de-pago.html">Medios de pago</a></li>
-                <li><a href="./pages/contacto.html">Contacto</a></li>
+            <input type="checkbox" name="" id="toggle">
+            <label for="toggle"><i class="material-icons">menu</i></label>
+            <div class="menu">
+                <ul>
+                    <li><a href="#">Inicio</a></li>
+                    <li><a href="./pages/quienes-somos.html">Quiénes somos</a></li>
+                    <li><a href="./pages/nuestros-viajes.html">Nuestros viajes</a></li>
+                    <li><a href="./pages/medios-de-pago.html">Medios de pago</a></li>
+                    <li><a href="./pages/contacto.html">Contacto</a></li>
             </ul>
+        </div>
         </nav>
     </header>
     <main>
