--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -8,12 +8,20 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Jacques+Francois&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link
+  rel="stylesheet"
+  href="https://fonts.googleapis.com/icon?family=Material+Icons"
+/>
+
 
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-    <header>
+    <header class="nav-wrapper">
         <nav>
+            <input type="checkbox" name="" id="toggle">
+            <label for="toggle"><i class="material-icons">menu</i></label>
+            <div class="menu">
             <ul>
                 <li><a href="../index.html">Inicio</a></li>
                 <li><a href="./quienes-somos.html">Quiénes somos</a></li>
@@ -21,6 +29,7 @@
                 <li><a href="./medios-de-pago.html">Medios de pago</a></li>
                 <li><a href="#">Contacto</a></li>
             </ul>
+        </div>
         </nav>
     </header>
     <main>
@@ -30,19 +39,19 @@
             <h2>Información de contacto</h2>
             <div>
                 <img src="https://cdn-icons-png.flaticon.com/128/159/159832.png" alt="">
-                <h4>+54 9 11 XXXX - XXXX</h4>
+                <h4> +54 9 11 XXXX - XXXX</h4>
             </div>
             <div>
                 <img src="https://cdn-icons-png.flaticon.com/128/1384/1384095.png" alt="">
-                <h4>+54 9 11 XXXX - XXXX</h4>
+                <h4> +54 9 11 XXXX - XXXX</h4>
             </div>
             <div>
                 <img src="https://cdn-icons-png.flaticon.com/128/1944/1944250.png" alt="">
-                <h4>contacto@xxxxx.com</h4>
+                <h4> contacto@xxxxx.com</h4>
             </div>
             <div>
                 <img src="https://cdn-icons-png.flaticon.com/128/3421/3421853.png" alt="">
-                <h4>Avenida Cabildo xxxx, <br>CABA, Argentina</h4>
+                <h4> Avenida Cabildo xxxx, <br>CABA, Argentina</h4>
             </div>
         </section>
         <section class="fondoVioleta">
@@ -59,6 +68,7 @@
                 <input type="text" id="mensaje"></li>
                 </ul>
             </form>
+                <button class="p-2"><a href="">Enviar mensaje</a></button>
         </section>
     </section>
     </main>
