--- a/pages/medios-de-pago.html
+++ b/pages/medios-de-pago.html
@@ -8,12 +8,20 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Jacques+Francois&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link
+  rel="stylesheet"
+  href="https://fonts.googleapis.com/icon?family=Material+Icons"
+/>
+
 
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-    <header>
+    <header class="nav-wrapper">
         <nav>
+            <input type="checkbox" name="" id="toggle">
+            <label for="toggle"><i class="material-icons">menu</i></label>
+            <div class="menu">
             <ul>
                 <li><a href="../index.html">Inicio</a></li>
                 <li><a href="./quienes-somos.html">Quiénes somos</a></li>
@@ -21,6 +29,7 @@
                 <li><a href="#">Medios de pago</a></li>
                 <li><a href="./contacto.html">Contacto</a></li>
             </ul>
+        </div>
         </nav>
     </header>
     <main>
