agrego medios-de-pago full responsive y SEO

--- a/index.html
+++ b/index.html
@@ -3,7 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inicio</title>
+    <meta name="description" content="¿Querés experimentar viajar sola pero no te animás? ¿Querés irte de vacaciones pero no tenés con quien? ¡Vení con nosotras!">
+    <meta name="keywords" content="viaje, agencia de viajes, viajes de mujeres, Argentina, grupos de mujeres">
+    <meta name="author" content="Micaela Ayelén Chanquía">
+    <meta property="og:title" content="Travel Pals">
+    <meta property="og:site_name" content="TravelPals">
+    <meta property="og:url" content="www.travelpals.com">
+    <meta property="og:description" content="Agencia de viajes destinada a la organización de paquetes turísticos grupales para mujeres.">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="">
+    <title>Inicio | TravelPals</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Jacques+Francois&display=swap" rel="stylesheet">
