--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contacto</title>
+    <meta name="description" content="¡Sacate todas las dudas! Escribinos acá.">
+    <meta name="keywords" content="dudas, consultas, preguntas, saber mas">
+    <meta name="author" content="Micaela Ayelén Chanquía">
+    <title>Contacto | TravelPals</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Jacques+Francois&display=swap" rel="stylesheet">
