--- a/pages/medios-de-pago.html
+++ b/pages/medios-de-pago.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Medios de pago</title>
+    <meta name="description" content="Contamos con diversos medios de pago y 10% de descuento con bancos seleccionados.">
+    <meta name="keywords" content="tarjetas, bancos, descuento">
+    <meta name="author" content="Micaela Ayelén Chanquía">
+    <title>Medios de pago | TravelPals</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Jacques+Francois&display=swap" rel="stylesheet">
@@ -37,25 +40,35 @@
         <section>
             <h2>Medios de pago habilitados</h2>
             <div class="mediosDePago">
-                <h3>Tarjetas de crédito y débito</h3>
-                <h3>Efectivo</h3>
-                <h3>Transferencia</h3>
+                <div class="tarjetasDeCreditoYDebito">
+                    <div>
+                        <h3>Tarjetas de crédito y débito</h3>
+                    </div>
+                    <div class="fotosTarjetasDeCreditoYDebito">
+                        <img src="../assets/Mediodepago1.png" alt="">
+                        <img src="../assets/Mediodepago2.png" alt="">
+                        <img src="../assets/Mediodepago3.png" alt="">
+                    </div>
+                </div>
+                <div class="efectivo">
+                    <div>
+                        <h3>Efectivo</h3>
+                    </div>
+                    <div class="fotosEfectivo">
+                        <img src="../assets/Mediodepago4.png" alt="">
+                        <img src="../assets/Mediodepago5.jpg" alt="">
+                    </div>
+                </div>
+                <div class="transferencia">
+                    <div>
+                        <h3>Transferencia</h3>
+                    </div>
+                    <div class="fotosTransferencia">
+                        <img src="../assets/Mediodepago5.png" alt="">
+                        <img src="../assets/Mediodepago6.png" alt="">
+                    </div>
+                </div>
             </div>
-            <div class="totalMediosDePago">
-            <div class="fotosMediosDePago">
-            <img src="../assets/Mediodepago1.png" alt="">
-            <img src="../assets/Mediodepago2.png" alt="">
-            <img src="../assets/Mediodepago3.png" alt="">
-        </div>
-            <div class="fotosMediosDePago">
-            <img src="../assets/Mediodepago4.png" alt="">
-            <img src="../assets/Mediodepago5.jpg" alt="">
-        </div>
-            <div class="fotosMediosDePago">
-            <img src="../assets/Mediodepago5.png" alt="">
-            <img src="../assets/Mediodepago6.png" alt="">
-        </div>
-    </div>
         </section>
         <section>
             <h2>Promociones</h2>
