--- a/pages/nuestros-viajes.html
+++ b/pages/nuestros-viajes.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nuestros viajes</title>
+    <meta name="description" content="Nuestro próximo destino es la ciudad de Bariloche, ubicada en la provincia de Río Negro. Ingresá para obtener más información.">
+    <meta name="keywords" content="Argentina, Bariloche, viajes en grupo, viajes de mujeres">
+    <meta name="author" content="Micaela Ayelén Chanquía">
+    <title>Nuestros viajes | TravelPals</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Jacques+Francois&display=swap" rel="stylesheet">
@@ -37,11 +40,11 @@
         <h2>Bariloche</h2>
         <section class="viaje">
             <div>
+            <p>Del 15 al 19 de mayo. Incluye aéreos, alojamiento con media pensión, excursiones y cena show de despedida en la última noche.</p>
+            <p>Proponemos un itinerario de <strong>5 días y 4 noches</strong> en la ciudad de Bariloche. Durante esos días, vamos a recorrer el centro, pero también visitaremos los alrededores de la ciudad.</p>
             <p>La ciudad de Bariloche te ofrece la posibilidad de realizar un montón de actividades durante todo el año. Hay mucho para hacer y recorrer: playas, ríos, bosques, estepa, deportes de aventura, caminar o, simplemente, contemplar sus increíbles paisajes.</p>
             <p>La ciudad está ubicada dentro del parque nacional Nahuel Huapi, junto a la cordillera de los Andes. En el 2012 fue declarada capital nacional del turismo de aventura, y en el 2015 capital nacional del chocolate.</p>
-            <p>Proponemos un itinerario de 5 días y 4 noches en la ciudad de Bariloche. Durante esos días, vamos a recorrer el centro, pero también visitaremos los alrededores de la ciudad.</p>
-            <p>Entre los atractivos más importantes de la ciudad se encuentran el centro cívico, Circuito Chico y Cerro Catedral. En sus alrededores conoceremos la ruta de los Siete Lagos, Puerto Blest, El Bolsón y Lago Puelo.</p>
-            <p>El paquete turístico que ofrecemos incluye aéreos, alojamiento con media pensión, excursiones y cena show de despedida en la última noche.</p>
+            <p>Entre los atractivos más importantes se encuentran el centro cívico, Circuito Chico y Cerro Catedral. En sus alrededores conoceremos la ruta de los Siete Lagos, Puerto Blest, El Bolsón y Lago Puelo.</p>
             <h3>Precio final: AR$ XXX.XXX</h3>
             <button class="p-2"><a href="">Quiero reservar</a></button>
             </div>
