--- a/pages/quienes-somos.html
+++ b/pages/quienes-somos.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Quiénes somos</title>
+    <meta name="description" content="Somos una agencia de viajes nueva, pero con un objetivo claro: lograr que cada vez más mujeres se animen a viajar aunque no tengan amigos, familia o una pareja que las acompañe. ¡Animate a viajar con nosotras y conocé más mujeres como vos!">
+    <meta name="keywords" content="quienes somos, equipo, informacion, que hacemos">
+    <meta name="author" content="Micaela Ayelén Chanquía">
+    <title>Quiénes somos | TravelPals</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -45,8 +48,8 @@
             diferente, pudimos mantener contacto hasta el presente.
           </p>
           <p>
-            El grupo está compuesto por una licenciada en turismo, una abogada,
-            una contadora y una coordinadora. La agencia surgió en marzo 2021
+            El grupo está compuesto por <strong>una licenciada en turismo, una abogada,
+            una contadora y una coordinadora</strong>. La agencia surgió en marzo 2021
             gracias a la necesidad de crear un espacio cálido y seguro para que
             cada vez más mujeres se animen a viajar solas.
           </p>
@@ -54,7 +57,7 @@
             El servicio que ofrecemos tiene como objetivo eliminar
             preocupaciones, brindando un paquete turístico que incluye
             transporte, alojamiento y actividades para que puedas enfocarte en
-            lo que realmente importa: ¡descansar y disfrutar!
+            lo que realmente importa: <strong>¡descansar y disfrutar!</strong>
           </p>
           <p>
             Hasta el momento realizamos seis viajes con destinos nacionales y
